app/apis/notifications/1.0/technical-guide.md
---
layout: guidance

title: Notifications API technical guide
description: Use this service to get updates about multiple applications submitted by the same business unit

eleventyNavigation:
  key: Notifications API v1.0 technical guide
  parent: Notifications API v1.0

notlive: false

versions:
  - value: "1.0"
    text: "v1.0 (latest)"
    selected: true
  - value: "0.3"
    text: "v0.3"

relatedAPIs:
  - text: Submit an application to change the Land Register API
    href: /apis/submit-an-application-to-change-the-land-register 
  - text: Send a document API
    href: /apis/send-a-document
  - text: Submit an application API
    href: /apis/submit-an-application
  - text: Application information API
    href: /apis/application-information
  - text: Download a document API
    href: /apis/download-a-document
  - text: More
    href: /find-a-service-api
    classes: govuk-!-font-weight-bold

sidenav:
  - theme: Contents
    text: 'How to use the Notifications API'
    href: '#how-to-use-the-notifications-api'
  - theme: Contents
    text: 'Validation rules'
    href: '#validation-rules'
  - theme: Contents
    text: 'Example requests and responses'
    href: '#example-requests-and-responses'
---
{% from "govuk/components/button/macro.njk" import govukButton %}

<section>

## How to use the Notifications API {.govuk-heading-m}

### Recieve notifications {.govuk-heading-s}

The GET request to fetch all notifications takes the following URL query parameters (which are optional):

- `created_after` - only retrieve notifications with a `created_timestamp` after this date
- `created_before` - only retrieve notifications with a `created_timestamp` before this date
- `status` - only retrieve notifications with a specific status, either `NEW` or `ACKNOWLEDGED`
- `occured_after` - only retrieve notifications with an `event_timestamp` after this date
- `occured_before` - only retrieve notifications with an `event_timestamp` before this date
- `notification_type` - only retrieve notifications with the specific `notification_type`
- `subject` - only retrieve notifications with the specific `subject`
- `additional_provider_filter` - only retrieve notifications that match the provided `additional_provider_filter`
- `limit` - the maximum number of notifications to return in a single response
{.govuk-list--bullet}

Only notifications related to applications submitted by the business unit ID provided will be returned.

Notification delivery is ‘at least once’, meaning a specific event at a specific time may result in one or more notifications (i.e. duplicate notifications for the same event).

Duplicate events will have the same `event_datetime` field and `notification_type` which can be used to locate and ignore duplicates when receiving notifications. Notifications will continue to be returned by the endpoint until they are acknowledged.

### Acknowledge notifications {.govuk-heading-s}

Once a notification has been processed by your system, the notification should be acknowledged. To do this, send a list of `notification_ids` to the Acknowledge notifications API as a POST request. This will change the status of those notifications to `ACKNOWLEDGED`.

<br>

### Notification types {.govuk-heading-s}
<table class="govuk-table">
  <caption class="govuk-table__caption govuk-table__caption--s">Order validation and submission</caption>
  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
      <th scope="col" class="govuk-table__header">Notification type</th>
      <th scope="col" class="govuk-table__header">Scenario</th>
      <th scope="col" class="govuk-table__header">Response</th>
    </tr>
  </thead>
  <tbody class="govuk-table__body">
    <tr class="govuk-table__row">
      <td class="govuk-table__cell" style="width:20%">Application failed validation</td>
      <td class="govuk-table__cell">An application is submitted, but mandatory fields are missing or incorrectly formatted. The system validates the input and rejects the application, triggering this notification
      </td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.creation.application.failed-validation</code>
      </td>
    </tr>
    <tr class="govuk-table__row">
      <td class="govuk-table__cell">Application accepted awaiting priority</td>
      <td class="govuk-table__cell">An application submitted outside business hours passes initial validation, is accepted, and awaits addition to the Daylist
      </td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.creation.application.accepted-awaiting-priority</code>
      </td>
    </tr>
    <tr class="govuk-table__row">
      <td class="govuk-table__cell">System error</td>
      <td class="govuk-table__cell">There is an attempt to create an application, but a system-level error occurs. The application cannot be processed, and this notification is sent to alert the integrator
      </td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.creation.application.error</code>
      </td>
    </tr>
    <tr class="govuk-table__row">
      <td class="govuk-table__cell">Application accepted priority protected</td>
      <td class="govuk-table__cell">An application submitted passes initial validation, is accepted, and added to the Daylist
      </td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.processing.application.accepted-priority-protected</code>
      </td>
    </tr>
  </tbody>
</table>

<table class="govuk-table">
  <caption class="govuk-table__caption govuk-table__caption--s">Order proccessing and completion</caption>
  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
      <th scope="col" class="govuk-table__header">Notification type</th>
      <th scope="col" class="govuk-table__header">Scenario</th>
      <th scope="col" class="govuk-table__header">Response</th>
    </tr>
  </thead>
  <tbody class="govuk-table__body">
    <tr class="govuk-table__row">
      <td class="govuk-table__cell">Application requisitioned</td>
      <td class="govuk-table__cell">A caseworker raises a requisition on an application requesting a response or document</td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.processing.correspondence-despatched</code>
      </td>
    </tr>
    <tr class="govuk-table__row">
      <td class="govuk-table__cell">Application completed</td>
      <td class="govuk-table__cell">The application has successfully passed all processing steps, including validation and approval
      </td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.processing.application.completed</code>
      </td>
    </tr>
    <tr class="govuk-table__row">
      <td class="govuk-table__cell">Application cancelled</td>
      <td class="govuk-table__cell">The application was in processing but was cancelled
      </td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.processing.application.cancelled</code>
      </td>
    </tr>
  </tbody>
</table>

<table class="govuk-table">
  <caption class="govuk-table__caption govuk-table__caption--s">Response and document upload for applications</caption>
  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
      <th scope="col" class="govuk-table__header">Notification type</th>
      <th scope="col" class="govuk-table__header">Scenario</th>
      <th scope="col" class="govuk-table__header">Response</th>
    </tr>
  </thead>
  <tbody class="govuk-table__body">
    <tr class="govuk-table__row">
      <td class="govuk-table__cell">Document successfully attached</td>
      <td class="govuk-table__cell">A user uploads a required document to an application during processing. The system successfully attaches the file and sends this notification
      </td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.processing.attachment-success</code>
      </td>
    </tr>
    <tr class="govuk-table__row">
      <td class="govuk-table__cell">Document attached failed validation</td>
      <td class="govuk-table__cell">A user uploads an attachment, but the file fails validation due to issues such as incorrect format, corrupted file, or missing mandatory details. The system rejects the attachment and triggers this notification
      </td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.processing.attachment-failed</code>
      </td>
    </tr>
    <tr class="govuk-table__row">
      <td class="govuk-table__cell">Message successfully attached</td>
      <td class="govuk-table__cell">A message is successfully added to the application during processing and the system confirms the attachment
      </td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.processing.message-success</code>
      </td>
    </tr>
     <tr class="govuk-table__row">
      <td class="govuk-table__cell">Message failed validation</td>
      <td class="govuk-table__cell">A message intended for the application fails validation because it violates formatting rules. The system rejects the message and sends this notification
      </td>
      <td class="govuk-table__cell govuk-!-width-one-third" style="white-space:pre-wrap; word-break:break-all"><code class="app-code app-code--inline">applications.processing.message-failed</code>
      </td>
    </tr>
  </tbody>
</table>
<br>
</section>
<section>

## Validation rules {.govuk-heading-m}

There are no validation rules for implementing this API.

</section>
<section>

## Example requests and responses {.govuk-heading-m}

For specific examples of notification payloads produced during application submission, view [Submit an application notifications](/apis/submit-an-application).

### Get notifications request {.govuk-heading-s}

`GET /v1/notifications?created_after=2025-01-01t00:00:00 http/1.1`

### Get notifications response {.govuk-heading-s}

<div class="code-wrapper">
{{ govukButton({ text: "Copy code", classes: "govuk-button--secondary copy-code" }) }}

```json
{
  "data": [{
    "notification_id": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
    "created_datetime": "2025-03-06t14:32:55.295z",
    "event_datetime": "2025-03-06t14:32:55.295z",
    "payload_schema": "https://example.com/",
    "notification_type": "string",
    "subject_type": "string",
    "subject": "string",
    "additional_provider_filter": "string",
    "status": "new",
    "payload": {
      "additionalprop1": {},
      "additionalprop2": {},
      "additionalprop3": {}
    }
  }]
}
```

</div>

### Acknowledge notifications request {.govuk-heading-s}

`POST /v1/notifications/acknowledge http/1.1`

<div class="code-wrapper">
{{ govukButton({ text: "Copy code", classes: "govuk-button--secondary copy-code" }) }}

```json
{
  "data": [
    "3fa85f64-5717-4562-b3fc-2c963f66afa6"
  ]
}
```
</div>

### Acknowledge notifications response {.govuk-heading-s}

<div class="code-wrapper">
{{ govukButton({ text: "Copy code", classes: "govuk-button--secondary copy-code" }) }}

```json
{
  "data": {
    "acknowledged": [
      "3fa85f64-5717-4562-b3fc-2c963f66afa6"
    ]
  }
}
```
</div>

</section>
